<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="account_expired_alert">Your WhatsApp service for %1$s expired on %2$s. Purchase service?</string>
    <string name="account_info_account_num">Phone number</string>
    <string name="account_info_check_eligibility">Checking eligibility...</string>
    <string name="account_info_confirm_continue_with_purchase">Do you still want to purchase service?</string>
    <string name="account_info_desc">Your service is attached to the phone number listed above. You can freely switch your mobile device, reinstall, or upgrade the software as long as your service phone number stays the same. We hope you enjoy our service.</string>
    <string name="account_info_details">Details</string>
    <string name="account_info_expiration">Service expiration</string>
    <string name="account_info_gave_service">Service purchased for %1$s.</string>
    <string name="account_info_purchase_extension_for">Purchase extension for</string>
    <string name="account_info_received_service_from_friend">%1$s has purchased service for you.</string>
    <string name="account_info_received_service_from_unknown">A friend has purchased service for you.</string>
    <string name="account_info_send_addr_body">Your WhatsApp Messenger payment address is:</string>
    <string name="account_info_send_addr_title">WhatsApp payment address</string>
    <string name="account_info_status_expired">Expired</string>
    <string name="account_info_status_unknown">Unknown</string>
    <string name="account_sync_acct_added">WhatsApp account is added already</string>
    <string name="account_sync_add">Please wait while we are adding your account</string>
    <string name="account_sync_authenticating">Authenticating</string>
    <string name="account_sync_message_detail_format">Message %s</string>
    <string name="account_sync_summary_column">WhatsApp</string>
    <string name="account_sync_voip_call_detail_format">WhatsApp Call %s</string>
    <string name="activity_not_found">You may not have a proper app for viewing this content</string>
    <string name="add_anonymous_contact_with_no_displayname">You may have just added a contact without giving a display name</string>
    <string name="add_broadcast_recipient">Add recipient...</string>
    <string name="add_caption">Add a caption...</string>
    <string name="add_contact">Add to contacts</string>
    <string name="add_contact_as_new_or_existing">Create a new contact or add to an existing contact?</string>
    <string name="add_exist">Add to existing contact</string>
    <string name="add_group_participant">Add participant...</string>
    <string name="add_group_participants">Add group participants</string>
    <string name="add_info_to_existing_contact">Add to exist contact</string>
    <string name="add_info_to_new_contact">Add to new contact</string>
    <string name="add_shortcut">Add chat shortcut</string>
    <string name="add_shortcut_short">Add shortcut</string>
    <string name="add_status">Add new status</string>
    <string name="address">address</string>
    <string name="adjust_date">Adjust date</string>
    <string name="alert">Alert</string>
    <string name="all_images">All pictures</string>
    <string name="all_media">All media</string>
    <string name="all_videos">All videos</string>
    <string name="amazon_fire_release_on_non_amazon_fire_device">"You've installed an unsupported version of WhatsApp. Please download the correct version from &lt;a href=\"%1$s\">Google Play Store&lt;/a> or from &lt;a href=\"%2$s\">whatsapp.com&lt;/a>."</string>
    <string name="amazon_home_hero_widget_title">Unread messages</string>
    <string name="android_wear_cant_talk">"Sorry, can't talk now"</string>
    <string name="android_wear_haha">Haha</string>
    <string name="android_wear_lol">Lol</string>
    <string name="android_wear_nice">Nice</string>
    <string name="android_wear_no">No</string>
    <string name="android_wear_ok">Ok</string>
    <string name="android_wear_on_my_way">On my way</string>
    <string name="android_wear_see_you_soon">See you soon</string>
    <string name="android_wear_thanks">Thanks</string>
    <string name="android_wear_yes">Yes</string>
    <string name="answer_the_call">Answer</string>
    <string name="archive_all_chats">Archive all chats</string>
    <string name="archive_all_chats_ask">Are you sure you want to archive ALL chats?</string>
    <string name="archive_broadcast">Archive broadcast list</string>
    <string name="archive_conversation">Archive chat</string>
    <string name="archived_chats">Archived chats</string>
    <string name="archived_chats_count">Archived chats (%d)</string>
    <string name="assign_to_contact">Assign to contact</string>
    <string name="attach">Attach</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_location">Location</string>
    <string name="attach_media">Attach media</string>
    <string name="attach_picture_from_camera">Photo</string>
    <string name="attach_picture_from_gallery">Gallery</string>
    <string name="attach_video">Video</string>
    <string name="audio_note_slide_to_cancel">Slide to cancel</string>
    <string name="call_icon_content_description">Small WhatsApp Icon associated with VoIP calling</string>
    <string name="contact_avatar_image">Contact Avatar Image</string>
    <string name="contact_name">contact name...</string>
    <string name="end_group">End group</string>
    <string name="exit_group">Exit group</string>
    <string name="not_spam_add_to_contacts">Not Spam. Add to contacts</string>
    <string name="report_spam_and_block">Report spam and block</string>
    <string name="search_in_contacts">Search in WhatsApp contacts</string>
    <string name="search_no_chats">No chats found</string>
    <string name="sender_not_a_contact">The sender is not in your contact list</string>
    <string name="settings_backup">Chat backup</string>
    <string name="status">Status</string>
    <string name="voip_call_bluetooth_toggle_description">Toggle Bluetooth</string>
    <string name="voip_call_end_button_description">End Voice Call</string>
    <string name="voip_call_goto_chat_description">View Chat</string>
    <string name="voip_call_label">WHATSAPP CALL</string>
    <string name="voip_call_mute_toggle_description">Mute Call</string>
    <string name="voip_call_speakerphone_toggle_description">Toggle Speakerphone</string>
    <string name="voip_call_start_button_description">Start Voice Call</string>
    <string name="welcome_chats_message">To start messaging contacts who have WhatsApp, tap %s at the top of your screen.</string>
    <string name="call_rating_title">Please rate the quality of your WhatsApp call</string>
    <string name="not_now">NOT NOW</string>
    <string name="settings_gdrive_account_name">Account</string>
    <string name="settings_gdrive_backup_now_title">Back up now</string>
    <string name="settings_gdrive_backup_options_title">Back up to Google Drive</string>
    <string name="settings_gdrive_category_title">Google Drive settings</string>
    <string name="settings_gdrive_network_settings_title">Back up over</string>
    <string name="submit">SUBMIT</string>
    <string name="user_feedback_hint">Tell us more</string>
</resources>