<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/small_list_row_height"
        android:layout_marginLeft="72.0dip"
        android:layout_marginTop="0.0dip"
        android:layout_marginRight="32.0dip">
        <ImageView android:id="@id/avatar" android:layout_width="@dimen/small_list_avatar_size" android:layout_height="@dimen/small_list_avatar_size" android:layout_marginRight="@dimen/small_list_avatar_padding" android:src="@drawable/avatar_contact" android:scaleType="fitCenter" android:contentDescription="@string/contact_avatar_image" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <com.whatsapp.TextEmojiLabel android:layout_gravity="left" android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_name" style="@style/ListItemTitle" />
            <com.whatsapp.TextEmojiLabel android:layout_gravity="left" android:id="@id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status" style="@style/ListItemSubtitle" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@id/divider" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="0.0dip" />
</LinearLayout>