<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/chats_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/conversations_search_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/search_no_matches" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="67.0dip" android:text="@string/search_no_chats" />
        <Button android:id="@id/search_in_contacts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_in_contacts" />
    </LinearLayout>
    <com.whatsapp.observablescrollview.ObservableListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textFilterEnabled="true" android:cacheColorHint="@android:color/transparent" android:divider="@drawable/conversations_list_divider" android:dividerHeight="0.5dip" android:headerDividersEnabled="false" android:footerDividersEnabled="false" />
    <FrameLayout android:gravity="center" android:id="@id/conversations_empty" android:background="#fffafafa" android:paddingLeft="32.0dip" android:paddingTop="?actionBarSize" android:paddingRight="32.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="17.0sp" android:textColor="#ff565656" android:gravity="center" android:layout_gravity="center" android:id="@id/welcome_chats_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_chats_message" style="@style/Text" />
    </FrameLayout>
    <include android:id="@id/conversations_empty_no_contacts" layout="@layout/empty_tell_a_friend" />
</LinearLayout>